# atlas-jax

./: .gitignore  ALIGNMENT_CHECKLIST.md  BENCHMARK_HANDOVER.md  CLAUDE.md  README.md  analyze_trace.py  atlas_implementation_plan.md  atlas_minimal.py  benchmark_all.slurm  benchmark_atlas.py  compare_results.py  debug_nan.py  profile_layer.py  profile_singlechunk.py  profile_sweep.py  pyproject.toml  results.tsv  test_pallas.py  test_triton_scan.py
atlas_jax/: __init__.py  attention.py  benchmark.py  checkpoint.py  config.py  data.py  enwik8.py  eval_niah.py  eval_wrapper.py  fused_chunk.py  kernels.py  mag_transformer.py  memory_layer.py  metrics.py  model.py  ops.py  optim.py  pallas_fused.py  polar_express.py  profile.py  profile_fused.py  profile_pe.py  profile_train.py  scan_kernel.py  state.py  tokenizer.py  train.py  train_distributed.py  train_enwik8.py  triton_pe.py  triton_scan.py
bench/: jax_gdn.py  learnability.py  mad_mem.py  mqar.py
docs/: atlas_paper_reference.md  implementation_audit.md
evals/: eval_niah.py  eval_wrapper.py
runs/: bench_baseline.slurm  bench_batched_pe.slurm  bench_bf16.slurm  bench_full.slurm  bench_fused_dne.slurm  bench_fused_scale.slurm  bench_nochk.slurm  bench_optimize.slurm  bench_scale_array.slurm  bench_scale_v2.slurm  compare_4way.slurm  compare_enwik8.slurm  debug_nan.slurm  exp_4gpu.slurm  exp_4gpu_5L.slurm  exp_4gpu_6L384.slurm  exp_4gpu_B128.slurm  exp_4gpu_B256.slurm  exp_4gpu_B256_lr15.slurm  exp_4gpu_B256_lr3e2.slurm  exp_4gpu_best_s123.slurm  exp_4gpu_lr15e3.slurm  exp_4gpu_lr1e2.slurm  exp_4gpu_lr3e2.slurm  (+64 more)
(+40 files in other folders)
