[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-jax"
version = "0.1.0"
description = "Atlas architecture (arXiv 2505.23735) in JAX/Equinox"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "pyarrow>=14.0",
    "tokenizers>=0.15",
    "tiktoken>=0.7",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["atlas_jax*"]
